--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@graphile/postgis-v5",
+  "name": "@xuhaojun/graphile-postgis",
   "version": "0.1.0",
   "description": "PostGIS support for PostGraphile v5 - Query and mutate spatial data using GeoJSON",
   "main": "dist/index.js",
@@ -19,7 +19,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/graphile/postgis-v5.git"
+    "url": "git+https@github.com:XuHaoJun/graphile-postgis.git"
   },
   "keywords": [
     "postgraphile",
@@ -42,9 +42,9 @@
   "author": "Graphile Contributors",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/graphile/postgis-v5/issues"
+    "url": "https://github.com/XuHaoJun/graphile-postgis/issues"
   },
-  "homepage": "https://github.com/graphile/postgis-v5#readme",
+  "homepage": "https://github.com/XuHaoJun/graphile-postgis#readme",
   "peerDependencies": {
     "@dataplan/pg": "^1.0.0-rc",
     "grafast": "^1.0.0-rc",
