Add publish configuration to package.json for public access
- Introduced a `publishConfig` section in `package.json` to set the package access level to public.
- This change facilitates easier distribution of the package on npm.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "PostGIS support for PostGraphile v5 - Query and mutate spatial data using GeoJSON",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "clean": "rm -Rf dist",
     "build": "tsc -p tsconfig.build.json",
